swagger PasswordController
